amélioration ogcapi
